# lvgl9-sdl2-windows-simulator

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  lv_conf.h  main.c
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
